# picman

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN-preview-optimization.md  README.md  ROADMAP.md  USAGE.md  refactor-plan.md
src/: hash.rs  lib.rs  logging.rs  main.rs  perceptual_hash.rs  scanner.rs  suggestions.rs  thumbnails.rs
src/cli/: dupes.rs  init.rs  list.rs  mod.rs  post_process.rs  previews.rs  rate.rs  repair.rs  status.rs  sync.rs  tag.rs  thumbnails.rs
src/db/: directories.rs  files.rs  filters.rs  mod.rs  queries.rs  schema.rs  tags.rs
src/serve/: CLAUDE.md  handlers.rs  mod.rs  models.rs
src/serve/assets/: api.js  app.js  base.css  duplicates.css  duplicates.js  filters.js  grid.css  grid.js  index.html  lightbox.css  lightbox.js  router.js  sidebar.css  state.js  style.css  tags.css  tags.js  toolbar.css  tree.css  tree.js
src/tui/: app.rs  colors.rs  dialogs.rs  exif.rs  mod.rs  mouse.rs  operations.rs  preview_cache.rs  preview_loader.rs  state.rs  ui.rs
src/tui/state/: files.rs  filter.rs  mod.rs  navigation.rs  preview.rs  rename.rs  search.rs  tags.rs
src/tui/widgets/: details_panel.rs  directory_tree.rs  file_list.rs  filter_dialog.rs  mod.rs  preview.rs  rename_dialog.rs  status_bar.rs  tag_popup.rs
tests/: cli.rs
