[package]
name = "picman"
version = "0.1.0"
edition = "2021"
description = "Photo library management tool"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File system
walkdir = "2"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# TUI
ratatui = "0.30"
crossterm = "0.28"
ratatui-image = { version = "1", features = ["rustix"] }
image = "0.25"

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization (for export/import)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallel processing
rayon = "1"

[dev-dependencies]
tempfile = "3"
